style(gradients) fix slider gradient in ff, fix map gradient on ios

--- a/src/stylus/sections.styl
+++ b/src/stylus/sections.styl
@@ -37,7 +37,7 @@
 
 .map-gradient
   height: 200px
-  background: linear-gradient(to bottom, $white 0%, transparent 100%)
+  background: linear-gradient(180deg, $white 0%, rgba(255,255,255,0) 100%)
   position: absolute
   z-index: 1
   width: 100%
@@ -62,7 +62,7 @@
     margin-bottom: 5px
     padding: 5px
     opacity: .7
-    
+
 @media screen and (min-width: 768px)
   .section
     padding: 30px
