--- a/src/stylus/slider.styl
+++ b/src/stylus/slider.styl
@@ -88,7 +88,7 @@
 .slider-gradient
   position: absolute
   height: 100%
-  background: linear-gradient(0, rgba(255,255,255,1) 17%, rgba(255,255,255,0) 100%);
+  background-image: linear-gradient(0deg, rgba(255,255,255,1) 17%, rgba(255,255,255,0) 100%);
   width: 100%
   z-index: 5
   bottom: 0
